Fix StaleHostResolver to handle sync returns from /etc/hosts resolution.

Bug: 844176
Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I24afd90a60a00ed7bd4700f13de78217cf4953e7
Reviewed-on: https://chromium-review.googlesource.com/1066751
Reviewed-by: Paul Jensen <pauljensen@chromium.org>
Commit-Queue: Misha Efimov <mef@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560274}
Former-commit-id: debaf4cdbf00fed03d13c4ae576d4b0d57fb7391